cabal-version:       2.4

name:                hurl
version:             0.1.0.0
description:         An interactive command line HTTP client.
homepage:            https://github.com/mjhart/hurl
bug-reports:         https://github.com/mjhart/hurl/issues
author:              Matt Hart
maintainer:          matthart4@gmail.com
copyright:
extra-source-files:  README.md, CHANGELOG.md

library
  hs-source-dirs: src
  exposed-modules:     Hurl
  build-depends:       aeson,
                       base,
                       brick,
                       bytestring,
                       case-insensitive,
                       exceptions,
                       http-conduit,
                       http-types,
                       req,
                       text,
                       unordered-containers,
                       vector,
                       vty
  ghc-options:
    -fwarn-tabs
    -fwarn-unused-imports
    -fwarn-missing-signatures
    -fwarn-name-shadowing
    -fwarn-incomplete-patterns
  default-language:    Haskell2010

executable hurl
  main-is:             Main.hs
  ghc-options:
    -threaded
    -fwarn-tabs
    -fwarn-unused-imports
    -fwarn-missing-signatures
    -fwarn-name-shadowing
    -fwarn-incomplete-patterns
  build-depends:       base,
                       hurl,
  default-language:    Haskell2010
